More spacing fixes

--- a/config/style.css
+++ b/config/style.css
@@ -234,8 +234,8 @@ window {
 
 .time-pill {
   min-height: 28px;
-  padding-left: 8px;
-  padding-right: 8px;
+  /*padding-left: 8px;
+  padding-right: 8px;*/
 
   background-color: var(--ctp-base);
   border: 2px solid var(--ctp-overlay1);
@@ -248,6 +248,10 @@ window {
 }
 
 /* Time popover */
+
+.expanded {
+  padding-right: 8px;
+}
 
 .time-popover {
   padding: 10px 12px;
